更新Controls.Uwp项目(使用新项目格式)

--- a/Themes/Generic.xaml
+++ b/Themes/Generic.xaml
@@ -11,6 +11,13 @@
                         Background="{TemplateBinding Background}"
                         BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" /> <!--Top Button-->
+                                <RowDefinition Height="*" /> <!--Images, Illustrations, Animations...-->
+                                <RowDefinition Height="*" /> <!--Talk-->
+                            </Grid.RowDefinitions>
+                        </Grid>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
