--- a/Themes/Generic.xaml
+++ b/Themes/Generic.xaml
@@ -1,7 +1,10 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ArknightsResources.Controls.Uwp">
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:ArknightsResources.Controls.Uwp"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d">
 
     <Style TargetType="local:StoryPlayer">
         <Setter Property="Template">
@@ -18,18 +21,20 @@
                             Grid.RowSpan="2"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
+                            d:Source="/ArknightsResources.Controls.Uwp/Assets/Blue.jpg"
                             Opacity="0.9"
-                            Source="/ArknightsResources.Controls.Uwp/Assets/Blue.jpg"
                             Stretch="UniformToFill" />
 
                         <!--  Top Button  -->
-                        <Grid Grid.Row="0" Height="130">
+                        <Grid
+                            Grid.Row="0"
+                            Height="120">
                             <Grid.Background>
                                 <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
                                     <LinearGradientBrush.GradientStops>
-                                        <GradientStop Offset="0" Color="#373534" />
-                                        <GradientStop Offset="0.22" Color="#615E5B" />
-                                        <GradientStop Offset="1" Color="Transparent" />
+                                        <GradientStop Offset="0" Color="#F017181d" />
+                                        <GradientStop Offset="0.3" Color="#CF15151b" />
+                                        <GradientStop Offset="1" Color="#00000000" />
                                     </LinearGradientBrush.GradientStops>
                                 </LinearGradientBrush>
                             </Grid.Background>
@@ -99,9 +104,9 @@
                             <Grid.Background>
                                 <LinearGradientBrush StartPoint="0,1" EndPoint="0,0 ">
                                     <LinearGradientBrush.GradientStops>
-                                        <GradientStop Color="Black"/>
-                                        <GradientStop Color="Transparent" Offset="1"/>
-                                        <GradientStop Color="#C8000000" Offset="0.6"/>
+                                        <GradientStop Offset="0.4" Color="Black" />
+                                        <GradientStop Offset="0.7" Color="#C8000000" />
+                                        <GradientStop Offset="1" Color="#00000000" />
                                     </LinearGradientBrush.GradientStops>
                                 </LinearGradientBrush>
                             </Grid.Background>
@@ -113,10 +118,10 @@
                                 Orientation="Horizontal">
                                 <TextBlock
                                     Margin="0,0,20,0"
+                                    d:Text="蓝毒"
                                     FontSize="20"
-                                    Foreground="LightGray"
-                                    Text="蓝毒" />
-                                <TextBlock FontSize="20" Text="博..博士?" />
+                                    Foreground="LightGray" />
+                                <TextBlock d:Text="博..博士?" FontSize="20" />
                             </StackPanel>
                         </Grid>
                     </Grid>
