--- a/StoryPlayer.xaml
+++ b/StoryPlayer.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="Black">
+    <Grid Background="Black" Tapped="OnRootGridTapped">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
@@ -18,7 +18,7 @@
             Grid.RowSpan="2"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
-            Source="/ArknightsResources.Controls.Uwp/Assets/Blue.jpg"
+            d:Source="/ArknightsResources.Controls.Uwp/Assets/Blue.jpg"
             Stretch="UniformToFill" />
 
         <!--  Top Button  -->
