--- a/StoryPlayer.xaml
+++ b/StoryPlayer.xaml
@@ -5,6 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:ArknightsResources.Controls.Uwp"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:models="using:ArknightsResources.Controls.Uwp.Models"
     d:DataContext="{d:DesignInstance Type=local:StoryPlayer}"
     mc:Ignorable="d">
 
@@ -98,10 +99,12 @@
 
             <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
                 <Button
-                    x:Name="ViewLogButton"
+                    x:Name="ViewStoryHistoryButton"
                     Width="60"
                     Height="60"
-                    Margin="5,0,0,0">
+                    Margin="5,0,0,0"
+                    Click="ShowStoryHistory"
+                    IsTabStop="{x:Bind IsTopButtonsTabStop, Mode=OneWay}">
                     <BitmapIcon UriSource="/ArknightsResources.Controls.Uwp/Assets/Icons/Log.png" />
                 </Button>
 
@@ -110,7 +113,8 @@
                     Width="60"
                     Height="60"
                     Margin="5,0,0,0"
-                    Click="HideTextAndTopButtons">
+                    Click="HideTextAndTopButtons"
+                    IsTabStop="{x:Bind IsTopButtonsTabStop, Mode=OneWay}">
                     <FontIcon
                         FontFamily="{ThemeResource SymbolThemeFontFamily}"
                         FontSize="25"
@@ -127,6 +131,7 @@
                     x:Name="AutoPlaySpeedButton"
                     Margin="0,0,10,0"
                     Click="AutoPlaySpeedButtonClicked"
+                    IsTabStop="{x:Bind IsTopButtonsTabStop, Mode=OneWay}"
                     Visibility="{x:Bind AutoButton.IsChecked, Mode=OneWay}">
                     <TextBlock FontSize="15" Text="1x" />
                 </ToggleButton>
@@ -135,7 +140,8 @@
                     x:Name="AutoButton"
                     Click="AutoButtonClicked"
                     FontSize="15"
-                    IsChecked="{x:Bind IsAuto, Mode=TwoWay}">
+                    IsChecked="{x:Bind IsAuto, Mode=TwoWay}"
+                    IsTabStop="{x:Bind IsTopButtonsTabStop, Mode=OneWay}">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock
                             x:Name="AutoButtonText"
@@ -149,7 +155,10 @@
                     </StackPanel>
                 </ToggleButton>
 
-                <Button x:Name="ExitButton" Margin="0,0,40,0">
+                <Button
+                    x:Name="ExitButton"
+                    Margin="0,0,40,0"
+                    IsTabStop="{x:Bind LoadStoryHistory, Mode=OneWay}">
                     <TextBlock FontSize="15" Text="退出▶" />
                 </Button>
             </StackPanel>
@@ -198,6 +207,68 @@
                     Text="{x:Bind StoryText, Mode=OneWay}"
                     TextWrapping="WrapWholeWords" />
             </Grid>
+        </Grid>
+
+        <!--  Story History  -->
+        <Grid
+            x:Name="StoryHistory"
+            Grid.Row="0"
+            Grid.RowSpan="2"
+            Background="#C9000000"
+            Visibility="{x:Bind LoadStoryHistory, Mode=OneWay}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <Button
+                Grid.Column="0"
+                Margin="10,10,20,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Click="HideStoryHistory"
+                Content="◀"
+                FontSize="20">
+                <Button.Resources>
+                    <SolidColorBrush x:Key="ButtonBackground" Color="Transparent" />
+                    <SolidColorBrush x:Key="ButtonBorderBrush" Color="Transparent" />
+                    <SolidColorBrush x:Key="ButtonBackgroundPointerOver" Color="Transparent" />
+                    <SolidColorBrush x:Key="ButtonBorderBrushPointerOver" Color="Transparent" />
+                    <SolidColorBrush x:Key="ButtonBackgroundPressed" Color="Transparent" />
+                    <SolidColorBrush x:Key="ButtonBorderBrushPressed" Color="Transparent" />
+                </Button.Resources>
+            </Button>
+            <ListView
+                x:Name="StoryHistoryListView"
+                Grid.Column="1"
+                Margin="0,10,0,0"
+                IsItemClickEnabled="False"
+                ItemsSource="{x:Bind StoryHistoryList}"
+                SelectionMode="None">
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="models:StoryHistoryItem">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="100" />
+                                <ColumnDefinition Width="45" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+
+                            <TextBlock
+                                Grid.Column="0"
+                                Foreground="LightGray"
+                                Text="{x:Bind Name}"
+                                TextAlignment="Right" />
+                            <TextBlock
+                                Grid.Column="1"
+                                Margin="15,0,5,0"
+                                HorizontalAlignment="Right"
+                                Text="▶" />
+                            <TextBlock Grid.Column="2" Text="{x:Bind Text}" />
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </Grid>
     </Grid>
 </UserControl>
